Ajustando interface e algumas funcionalidades de autenticação e validação

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,7 +36,8 @@
         android:id="@+id/welcome_text"
         android:layout_width="298dp"
         android:layout_height="68dp"
-        android:text="Welcome administrator, you are successfully logged in"
+        android:gravity="center"
+        android:text="Welcome, you are successfully logged in"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
