--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,20 @@
     tools:context=".RegisterActivity">
 
     <Button
+        android:id="@+id/btn_signup_register2"
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:onClick="cancel"
+        android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup_register"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
         android:id="@+id/btn_signup_register"
         android:layout_width="210dp"
         android:layout_height="40dp"
