--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
         android:id="@+id/btn_signup_register"
         android:layout_width="210dp"
         android:layout_height="40dp"
-        android:onClick="signup"
+        android:onClick="signUp"
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
